[package]
name = "password_hasher_cli"
authors = ["Hassan El-Masri <hassan@unixtime.com>"]
description = "A CLI utility for hashing passwords"
license = "MIT"
repository = "https://github.com/unixtime/password-hasher-cli"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
rust-argon2 = "2.1.0"
rand = "0.8.5"
diesel = { version = "2.1.6", features = ["postgres", "mysql", "sqlite", "chrono"] }
dotenv = "0.15.0"
rpassword = "7.3.1"
urlencoding = "2.1.3"
clap = "4.5.4"